--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <!-- 카카오 map, marker 이용 -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6b2d30e7d44d413e6b0bf591686fdf2a&libraries=services"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
