--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
 
     <!-- 카카오 map, marker 이용 -->
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6b2d30e7d44d413e6b0bf591686fdf2a&libraries=services"></script>
+  
+    <!-- bootstrap theme (Optional) -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+        
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
