css: Landing, Chat, StudyDetail Page  디자인 변경

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@
   
     <!-- bootstrap theme (Optional) -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Noto+Sans+KR&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
         
   </head>
   <body>
