--- a/public/index.html
+++ b/public/index.html
@@ -32,12 +32,11 @@
     <!-- bootstrap theme (Optional) -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
 
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Noto+Sans+KR&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
-        
-  </head>
-  <body>
+    <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&family=Jua&family=Noto+Sans+KR&family=Nunito&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
